# OSlo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  install.sh
cmake/: SetFortranFlags.cmake  SetParallelizationLibrary.cmake
lib/FATODE/: CMakeLists.txt  ERK_f90_Integrator.F90  RK_LS_Solver.F90  RK_f90_Integrator.F90  ROS_LS_Solver.F90  ROS_f90_Integrator.F90  SDIRK_LS_Solver.F90  SDIRK_f90_Integrator.F90
lib/FWD/: CMakeLists.txt  RK_LS_Solver.F90  RK_f90_Integrator.F90  ROS_f90_Integrator.F90
lib/Intel-ODE/examples/FORTRAN/: iode_example_f90.f90
licenses/: HAIRER.txt
scripts/: test.sh
src/lib/: CMakeLists.txt  OSlo.f90  Radau.f  dvode.f  dvodeOMP.f90  hairerRadau.f  hairerRadau5.f  hairerRodas.f  hairerSdirk4.f  hairerToolbox.f  libradau.f  radau.f  sdirk4.f
src/test/: CMakeLists.txt  robertson.f90  robertsonMPI.f90  robertsonOMP.f90  robertson_OMP.f90  test-1.f90
